# ohtu-miniprojekti

./: .coverage  .coveragerc  .env  .gitignore  .pylintrc  AppLibrary.py  README.md  app.py  bibtex_converter.py  coverage.xml  db.py  fly.toml  log.html  output.xml  printing_stuff.py  pyproject.toml  reference_database.py  report.html  requirements.txt  routes.py  run_robot_tests.sh  schema.sql  tasks.py
.github/workflows/: main.yml
hakemisto/: tiedosto
public/: index.html
src/: AppLibrary.py  app.py  bibtex_converter.py  db.py  log.html  output.xml  reference_database.py  report.html  routes.py
src/static/: main.css
src/templates/: book_bibtex.html  createSite.html  create_book.html  dateSortedBooks.html  dateSortedMiscs.html  index.html  layout.html  list.html  nameSortedBooks.html  nameSortedMiscs.html  website_bibtex.html
src/tests/: book_testing.robot  database_test.py  home.robot  resource.robot  website_testing.robot
templates/: index.html
tests/: database_test.py  home.robot  resource.robot
