[tool.poetry]
name = "ohtu-miniprojekti"
version = "0.1.0"
description = ""
authors = ["emma <emmasofia@live.fi>"]
readme = "README.md"
packages = [{include = "ohtu_miniprojekti"}]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.2.2"


[tool.poetry.group.dev.dependencies]
coverage = "^6.5.0"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
