[tool.poetry]
name = "ohtu-miniprojekti"
version = "0.1.0"
description = ""
authors = ["emma <emmasofia@live.fi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.2.2"
robot = "^20071211"
selenium = "^4.7.2"
pytest = "^7.2.0"
invoke = "^1.7.3"

[tool.poetry.dev-dependencies]
coverage = "^6.5.0"
pytest = "^7.2.0"
pylint = "^2.15.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
