[tool.poetry]
name = "ohtu-miniprojekti"
version = "0.1.0"
description = ""
authors = ["emma <emmasofia@live.fi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.2.2"
robot = "^20071211"
selenium = "^4.7.2"
pytest = "^7.2.0"
invoke = "^1.7.3"
robotframework-seleniumlibrary = "^6.0.0"
attrs = "^22.1.0"
click = "^8.1.3"
exceptiongroup = "^1.0.4"
flask-sqlalchemy = "^3.0.2"
greenlet = "^2.0.1"
gunicorn = "^20.1.0"
importlib-metadata = "^5.1.0"
iniconfig = "^1.1.1"
itsdangerous = "^2.1.2"
jinja2 = "^3.1.2"
markupsafe = "^2.1.1"
packaging = "^22.0"
pluggy = "^1.0.0"
psycopg2 = "^2.9.5"
psycopg2-binary = "^2.9.5"
pylint = "^2.15.8"
pyparsing = "^3.0.9"
pyperclip = "^1.8.2"
python-dotenv = "^0.21.0"
sqlalchemy = "^1.3.23"
tomli = "^2.0.1"
werkzeug = "^2.2.2"
zipp = "^3.11.0"

[tool.poetry.dev-dependencies]
coverage = "^6.5.0"
pytest = "^7.2.0"
pylint = "^2.15.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
